fixed bug with homepage vertical spacing

--- a/public/stylesheets/projectsstyle.css
+++ b/public/stylesheets/projectsstyle.css
@@ -1,5 +1,5 @@
 .projects-box {
-    margin-top: 600px;
+    margin-top: 150px;
     width: 100%;
     display: inline-flex;
     flex-direction: column;
